# dandelion

./: .env.example  .gitignore  LICENSE  README.md  dcommit.sh  pyproject.toml
.github/workflows/: ci.yml
evals/: README.md  ablation.py  judge.py  metrics.py  run_evals.py
evals/golden/: debug_set.json  holdout_set.json  members_gold.json
src/dandelion/: __init__.py  chains.py  cli.py  config.py
src/dandelion/adapters/activity/: __init__.py  blockscout.py  composite.py  etherscan.py
src/dandelion/adapters/llm/: __init__.py  anthropic.py  factory.py  openai_compat.py
src/dandelion/adapters/rpc/: jsonrpc.py
src/dandelion/domain/: __init__.py  abi.py  actions.py  activity.py  agreement.py  anomalies.py  audit.py  classify.py  clones.py  cooccurrence.py  deployers.py  diagnostics.py  factory_events.py  getters.py  labels.py  membership.py  models.py  multichain.py  peers.py  proxies.py  reads.py  relations.py  routing.py  sanitize.py  selectors.py  singleton.py  tokens.py
src/dandelion/ports/: __init__.py
src/dandelion/services/: __init__.py  enrich.py  membrane.py  probes.py  reconstruct.py
tests/: test_actions.py  test_activity.py  test_activity_etherscan.py  test_ai_pure.py  test_anomalies.py  test_audit.py  test_classify.py  test_clones.py  test_domain_units.py  test_enrich.py  test_getters.py  test_llm_factory.py  test_membership.py  test_membrane.py  test_peers.py  test_proxies.py  test_reconstruct.py  test_reconstruct_core.py  test_relations.py  test_role_hub.py  test_sanitize.py  test_singleton.py  test_sources.py  test_tokens.py
(+7 files in other folders)
