[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dandelion"
version = "0.0.1"
description = "Reconstruct a protocol's on-chain architecture from addresses, not from a repository."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "danogurtsov" }]
keywords = ["ethereum", "evm", "smart-contracts", "onchain", "reverse-engineering", "proxy", "security"]
dependencies = [
    "web3>=6.15",
    "httpx>=0.27",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "typer>=0.12",
    "structlog>=24.1",
    "tenacity>=8.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "mypy>=1.10",
    "pre-commit>=3.7",
]

[project.scripts]
dandelion = "dandelion.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/dandelion"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
"src/dandelion/cli.py" = ["B008"]   # typer uses function calls in argument defaults by design

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
